test/corpus/control_flow.txt
=====================================
Goto Statement
=====================================

goto @MyLabel

---

(source_file
  (goto_statement
    (label_ref)))

=====================================
Gosub Statement
=====================================

gosub @MySub
return

---

(source_file
  (gosub_statement
    (label_ref))
  (return_statement))

=====================================
While Loop
=====================================

while true
  wait 250 ms
end

---

(source_file
  (while_loop
    (condition)
    (wait_statement
      (integer))))

=====================================
Repeat Until Loop
=====================================

repeat
  wait 0
until $counter > 10

---

(source_file
  (repeat_loop
    (wait_statement
      (integer))
    (condition
      (comparison
        (global_var)
        (integer)))))
